[package]
name = "spinsleeper"
version = "0.1.0"
edition = "2021"
authors = ["Lee Brown <hello@leebrown.me>"]
description = "A simple wrapper around rust spin_sleep"

[lib]
name = "spinsleeper"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
spin_sleep = "1.3.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["timeapi"] }

[profile.dev]
opt-level = 3
debug = false
